dfuzzer_sources = files(
        'bus.c',
        'bus.h',
        'dfuzzer.c',
        'fuzz.c',
        'fuzz.h',
        'introspection.c',
        'introspection.h',
        'log.c',
        'log.h',
        'rand.c',
        'rand.h',
        'util.c',
        'util.h',
)

dfuzzer_test_server_sources = files(
        'dfuzzer-test-server.c',
)
