dfuzzer_util_sources = files(
        'bus.c',
        'bus.h',
        'fuzz.c',
        'fuzz.h',
        'introspection.c',
        'introspection.h',
        'log.c',
        'log.h',
        'rand.c',
        'rand.h',
        'suppression.c',
        'suppression.h',
        'util.c',
        'util.h',
)

dfuzzer_sources = dfuzzer_util_sources + files(
        'dfuzzer.c',
)

dfuzzer_test_server_sources = files(
        'dfuzzer-test-server.c',
)
